fixed spacing of PredictionItems

--- a/frontend/src/components/PredictionItem/style.css
+++ b/frontend/src/components/PredictionItem/style.css
@@ -1,18 +1,33 @@
+.prediction-item__container {
+  border: 1px solid red;
+  border-radius: 0.5rem;
+  margin: 0.5rem;
+  padding: 0.5rem;
+}
+
 .prediction-item__date {
-  padding: 0.25rem;
-}
-
-.prediction-item__teams {
-  display: flex;
-  justify-content: center;
-  padding: 1rem;
-  padding-top: 0.25rem;
-}
-
-.prediction-item__team {
-  padding: 0.25rem;
+  padding-bottom: 0.5rem;
 }
 
 .prediction-item__input {
-  width: 3rem;
+  text-align: center;
+}
+
+.prediction-item__box-container {
+  display: flex;
+}
+
+.prediction-item__box {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.prediction-item__box:first-child > span {
+  margin-left: auto;
+}
+
+.prediction-item__box:last-child > span {
+  margin-right: auto;
 }
