--- a/frontend/src/components/PredictionList/style.css
+++ b/frontend/src/components/PredictionList/style.css
@@ -1,4 +1,4 @@
 .prediction-list__container {
   border: 1px solid red;
-  padding: 2rem;
+  padding: 1rem;
 }
